--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             <div class="menu-icon-block">
                 <img alt="side icon" src="images/Badge.png" />
             </div>
+            <div class="mob-nav-icon" onclick="openMobNav()" id="openMobIcon">
+                <i class="fa fa-bars"></i>
+            </div>
+            <div class="mob-nav-icon" onclick="closeMobNav()" style="display:none;" id="closeMobIcon">
+                <i class="fa fa-times"></i>
+            </div>
         </div>
         <div id="mySidenav" class="menu-exp-container">
             <a href="#">Menu Heading</a>
